--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "tailwind-merge": "^2.5.1"
   },
   "devDependencies": {
+    "@types/node": "22.2.0",
+    "@types/react": "18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
