--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.3",
     "framer-motion": "^11.3.26",
     "next": "14.2.5",
     "react": "^18",
